prevent overflow of svg strokes with media queries for portrait or landscape orientation

--- a/anki.sass
+++ b/anki.sass
@@ -1,7 +1,14 @@
-svg
-  width: 50%
-  height: auto
+@media only screen and (orientation: portrait)
+  svg
+    width: 80vw
+    height: 80vw
 
+@media only screen and (orientation: landscape)
+  svg
+    width: 56vh
+    height: 56vh
+
+svg
   text
     font: 8pt helvetica
     stroke-width: 0
